--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,16 @@ h1 {
     margin: 20px auto;
     padding-bottom: 10px;
 }
+
+pre {
+    font-family: Verdana, sans-serif;
+    text-align: center;
+    font-size: 15px
+}
+h2 {
+    text-align: center;
+    font-size: 20px;
+}
+main {
+    background-color: hsla(34, 57%, 70%, 0.133);
+}
