--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h1 {
     padding-bottom: 10px;
 }
 
-pre {
+#info-para {
     font-family: Verdana, sans-serif;
     text-align: center;
     font-size: 15px
