--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,46 @@
 h1 {
     text-align: center;
 }
+
 #img-div {
     background-color: white;
     text-align: center;
 }
+
 #image {
     display: block;
     max-width: 100%;
     height: auto;
-    padding-top: 8px;
-    margin: 20px auto;
+    padding-top: 0.5rem;
+    margin: 1.25rem auto;
 }
+
 #img-caption {
-    margin: 20px auto;
-    padding-bottom: 10px;
+    margin: 1.25rem auto;
+    padding-bottom: 0.625rem;
 }
 
 #info-para {
     font-family: Verdana, sans-serif;
     text-align: center;
-    font-size: 15px
+    font-size: 0.9375rem;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 1rem;
 }
+
 h2 {
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
+
 main {
     background-color: hsla(34, 57%, 70%, 0.133);
+}
+
+@media (max-width: 600px) {
+    #info-para {
+        max-width: 90%;
+    }
 }
